# taskManager

./: .env  Dockerfile  LICENSE  README.md  docker-compose.yaml  pyproject.toml
app/: app.py  database.py  db.py
app/api/: __init__.py  taskAPI.py
app/auth/: __init__.py  authRouter.py  router.py  schema.py  supabaseAuth.py
app/helper/: helper.py
app/model/: __init__.py  taskModel.py  userModel.py
templates/: loggedIn.html  login.html
tests/: test_api.py
