[tool.poetry]
name = "taskmanager"
version = "0.1.0"
description = ""
authors = ["Princeton Wong <princetonwong2@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.98.0"
uvicorn = "^0.22.0"
sqlmodel = "^0.0.8"
pytest = "^7.4.0"
asyncpg = "^0.27.0"
fastapi-sqlalchemy = "^0.2.1"
itsdangerous = "^2.1.2"
python-dotenv = "^1.0.0"
supabase = "^1.0.3"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

